--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="user_thumb">
            
                   <div class="user_details">
-                   <p>Welcome, <span>Nathalie</span></p>
+                   <p>Willy, <span>Nathalie</span></p>
                   </div>  
                   <div class="user_avatar"><img src="images/avatar3.jpg" alt="" title="" /></div>       
                 </div>
