--- a/page-login-1.html
+++ b/page-login-1.html
@@ -55,7 +55,7 @@
                     <input type="password" placeholder="Password">
                 </div>          
                 <div class="clear"></div>
-                <a href="#" class="button button-full button-m shadow-large button-round-small bg-green1-dark top-30 bottom-0">LOGIN</a>
+                <a href="#" class="button button-full button-m shadow-large button-round-small bg-green1-dark top-30 bottom-0">Loginn</a>
                 <div class="divider top-30"></div>
                 <a href="#" class="back-button button button-icon button-full button-xs shadow-large button-round-small font-11 bg-facebook top-30 bottom-0"><i class="fab fa-facebook-f"></i><span class="left-40">Sign in with Facebook</span></a>
                 <a href="#" class="back-button button button-icon button-full button-xs shadow-large button-round-small font-11 bg-twitter top-10 bottom-20"><i class="fab fa-twitter"></i><span class="left-40">Sign in with Twitter</span></a>
