--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
 <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">    
 <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
+
+<!-- ------------------ Libreria de notificaciones toastr ------------------ -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
     
 <body class="theme-light"  data-highlight="blue2">
@@ -93,4 +96,15 @@
 <script type="text/javascript" src="scripts/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom.js"></script>
 <script type="text/javascript" src="js/validator.js"></script>
+<!-- ------------------------------- toastr -------------------------------- -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<script>
+
+        // let data = sessionStorage.getItem('key');
+        //     if(data != '' || data != null || data != undefined){
+        //         location.href='index.html';     
+        //     }
+        
+</script>
+
 </body>
