--- a/login.html
+++ b/login.html
@@ -1,5 +1,13 @@
+<!-- ------------------ Validacion token de localStorage ------------------- -->
+<script>
+    if (localStorage.getItem('token') == '' || localStorage.getItem('token') == null || localStorage.getItem('token') == undefined ) {
+        console.log('token vacio')
+    }else{
+        location.href="index.html"
+    }
+</script>
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="es">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -8,7 +16,8 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
-<link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">    
+<link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">   
+<link rel="manifest" href="_manifest.json"> 
 <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
 
 <!-- ------------------ Libreria de notificaciones toastr ------------------ -->
@@ -88,7 +97,7 @@
     
 
 
-    <div class="menu-hider"></div>
+    <!-- <div class="menu-hider"></div> -->
 </div>
 
 
@@ -96,6 +105,7 @@
 <script type="text/javascript" src="scripts/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom.js"></script>
 <script type="text/javascript" src="js/validator.js"></script>
+<script type="text/javascript" src="scripts/pwa.js"></script>
 <!-- ------------------------------- toastr -------------------------------- -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script>
