--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 <script type="text/javascript" src="scripts/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom.js"></script>
 <script type="text/javascript" src="js/validator.js"></script>
-<script type="text/javascript" src="scripts/pwa.js"></script>
+<!-- <script type="text/javascript" src="scripts/pwa.js"></script> -->
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
 <!-- ------------------------------- toastr -------------------------------- -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
