--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
 <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">   
-<link rel="manifest" id="manifest-pwa" href="_manifest.json" data-pwa-version="set_by_pwa.js">
+<link rel="manifest"   type="manifest" href="_manifest.json">
 <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
 
 <!-- ------------------ Libreria de notificaciones toastr ------------------ -->
