--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
 <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">   
-<link rel="manifest"   type="manifest" href="_manifest.json">
+<link rel="manifest"   type="manifest" href="/_manifest.json">
 <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
 
 <!-- ------------------ Libreria de notificaciones toastr ------------------ -->
@@ -105,7 +105,7 @@
 <script type="text/javascript" src="scripts/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom.js"></script>
 <script type="text/javascript" src="js/validator.js"></script>
-<script type="text/javascript" src="scripts/pwa.js"></script>
+<!-- <script type="text/javascript" src="scripts/pwa.js"></script> -->
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
 <!-- ------------------------------- toastr -------------------------------- -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
