--- a/login.html
+++ b/login.html
@@ -18,7 +18,9 @@
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
 <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">   
 <link rel="manifest" href="manifest.json">
-<link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/icon_pwa/128x128.png">
+
+<meta name="theme-color" content="#caf3f4">
 
 <!-- ------------------ Libreria de notificaciones toastr ------------------ -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
@@ -107,13 +109,13 @@
          data-menu-height="340" 
         data-menu-effect="menu-parallax">
         <div class="boxed-text-huge top-25">
-            <img class="round-medium preload-image center-horizontal" data-src="app/icons/icon-128x128.png" alt="img" width="90">
-            <h4 class="center-text bolder top-20 bottom-10">Add Azures on your Home Screen</h4>
+            <img class="round-medium preload-image center-horizontal" data-src="images/icon_pwa/128x128.png" alt="img" width="90">
+            <h4 class="center-text bolder top-20 bottom-10">Instalar Marea Beneficios?</h4>
             <p>
-                Install Azures on your home screen, and access it just like a regular app. It really is that simple!
+                Instala Marea Beneficios en tu pantalla de inicio y accede a ella como una aplicación normal. ¡Es realmente así de simple!
             </p>
-            <a href="#" class="pwa-install button button-xs button-round-medium button-center-large shadow-large bg-highlight bottom-0">Add to Home Screen</a><br>
-            <a href="#" class="pwa-dismiss close-menu center-text color-gray2-light uppercase ultrabold opacity-60 under-heading font-10">Maybe later</a>
+            <a href="#" class="pwa-install button button-xs button-round-medium button-center-large shadow-large bg-highlight bottom-0">Instalar</a><br>
+            <a href="#" class="pwa-dismiss close-menu center-text color-gray2-light uppercase ultrabold opacity-60 under-heading font-10">Salir</a>
             <div class="clear"></div>
         </div>
     </div>   
@@ -124,10 +126,10 @@
          data-menu-height="320" 
         data-menu-effect="menu-parallax">
         <div class="boxed-text-huge top-25">
-            <img class="round-medium preload-image center-horizontal" data-src="app/icons/icon-128x128.png" alt="img" width="90">
-            <h4 class="center-text bolder top-20 bottom-10">Add Azures on your Home Screen</h4>
+            <img class="round-medium preload-image center-horizontal" data-src="images/icon_pwa/128x128.png alt="img" width="90">
+            <h4 class="center-text bolder top-20 bottom-10">Instalar Marea Beneficios?</h4>
             <p class="bottom-15">
-                Install Azures on your home screen, and access it just like a regular app.  Open your Safari menu and tap "Add to Home Screen".
+                Instala Marea Beneficios en tu pantalla de inicio y accede a ella como una aplicación normal. Abra su menú Safari y toque "Agregar a la pantalla de inicio".
             </p>
             <div class="clear"></div>
             <a href="#" class="pwa-dismiss close-menu center-text color-highlight uppercase ultrabold opacity-80 top-25">Maybe later</a>
