--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <div class="content">
             <div class="one-half">
-                <a href="#" class="top-30 button button-m round-small button-full shadow-small bg-highlight bottom-40">Purchase</a>
+                <a href="sqr/index.html" class="top-30 button button-m round-small button-full shadow-small bg-highlight bottom-40">Purchase</a>
             </div>
             <div class="one-half last-column">
                 <a href="#" class="top-30 button button-m round-small button-full shadow-small button-border color-highlight border-highlight bottom-40">Contact Us</a>
