--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
                 <div class="caption-bg owl-lazy" data-src="images/pictures/14m.jpg"></div>
             </div>
         </div>
+
+<!-- -------------------- Hacer un lindo diseño del qr --------------------- -->
+
         <a href="sqr/index.html">QR</a>
+
+<!-- --------------------------------- end --------------------------------- -->
+
         <div class="content">
             <div class="one-half">
                 <a href="sqr/index.html" class="top-30 button button-m round-small button-full shadow-small bg-highlight bottom-40">Purchase</a>
